# domovoy

./: .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile  README.md  buildDocker.sh  pyproject.toml  run.sh
.gitea/workflows/: on_push.yaml
.github/workflows/: build-pyi-package.yml  docker-image.yml  python-publish.yml
docs/source/: conf.py  index.md
docs/source/api/: applications.md  index.md  plugins.md  types.md
docs/source/examples/: advanced.md  climate-control.md  entity-creation.md  index.md  scheduling.md  simple-toggle.md  state-listeners.md
docs/source/getting-started/: configuration.md  first-app.md  index.md
docs/source/guides/: callbacks.md  hass.md  hot-reload.md  index.md  mixins.md  requirements.md  servents.md  state-management.md  type-stubs.md
domovoy/: app.py  cli.py
domovoy/applications/: __init__.py  registration.py  types.py
domovoy/core/: app_infra.py  configuration.py  context.py  errors.py  logging.py  task_utils.py  thread_pool.py  utils.py
domovoy/core/dependency_tracking/: deepreload.py  dependency_tracker.py  file_watcher.py
domovoy/core/engine/: active_engine.py  engine.py
domovoy/core/logging/: __init__.py  http_json.py  logger_adapter_with_trace.py
domovoy/core/services/: callback_register.py  event_listener.py  pip_dependencies.py  service.py
domovoy/core/services/webapi/: __init__.py  schema.py
domovoy/plugins/: plugins.py
domovoy/plugins/callbacks/: __init__.py  entity_listener_callbacks.py  event_listener_callbacks.py
domovoy/plugins/hass/: __init__.py  api.py  apps.py  core.py  domains.py  entities.py  entity_id.py  exceptions.py  parsing.py  synthetic.py  types.py
domovoy/plugins/hass/typing/: apps.py  entities.py  services.py
domovoy/plugins/logger/: __init__.py
domovoy/plugins/meta/: __init__.py
domovoy/plugins/servents/: __init__.py  entities.py  entity_configs.py  enums.py  exceptions.py
domovoy/plugins/servents_v2/: __init__.py
domovoy/plugins/time/: __init__.py
domovoy/plugins/utils/: __init__.py
synthetic/: entities.py  services.py
