[project]
name = "domovoy"
requires-python = ">=3.12"

[tool.poetry]
name = "domovoy"
version = "0.1.0"
description = ""
authors = ["cargsl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
importlab = "^0.8"
watchdog = "^5.0.2"
coloredlogs = "^15.0.1"
apscheduler = "^3.10.1"
websockets = "^12.0"
dataclass-wizard = "^0.22.2"
pyyaml = "^6.0"
python-dateutil = "^2.8.2"
astral = "^3.2"
aiohttp = "^3.10.5"
strawberry-graphql = "^0.254.0"
cron-converter = "^1.2.1"
orjson = "^3.10.6"
idna = "^3.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
types-pytz = "^2024.1.0.20240417"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
stubPath = "typings"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"] # Default config for ruff: ["E4", "E7", "E9", "F", "W", "ARG"]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "BLE001",  # blind-except
    "C901",    # complex-structure
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D105",    # undocumented-magic-method
    "D106",    # undocumented-public-nested-class
    "D107",    # undocumented-public-init
    "D203",    # no-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "EM101",   # raw-string-in-exception
    "INP001",  # implicit-namespace-package
    "PERF203", # try-except-in-loop
    "PLC0105", # type-name-incorrect-variance
    "PLE1205", # logging-too-many-args
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR2004", # magic-value-comparison
    "PLW0603", # global-statement
    "S106",    # hardcoded-password-func-arg
    "S311",    # suspicious-non-cryptographic-random-usage
    "S603",    # subprocess-without-shell-equals-true
    "SIM105",  # suppressible-exception
    "TCH001",  # typing-only-first-party-import
    "TCH002",  # typing-only-third-party-import
    "TCH003",  # typing-only-standard-library-import
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
    "TRY300",  # try-consider-else
    "TRY400",  # error-instead-of-exception
    "TRY401",  # verbose-log-message

    # Consider removing from ignore
    "PGH003",

    # These are rules that are valuable but can be disabled when configuring ruff because they are very noisy in the current codebase
    # "A002",   # builtin-argument-shadowing
    # "A003",   # builtin-attribute-shadowing
    # "ANN001", # missing-type-function-argument
    # "ANN002", # missing-type-args
    # "ANN003", # missing-type-kwargs
    # "ANN201", # missing-return-type-undocumented-public-function
    # "ANN204", # missing-return-type-special-method
    # "ARG002", # unused-method-argument
    # "COM812", # missing-trailing-comma
    # "D400",   # ends-in-period
    # "D401",   # non-imperative-mood
    # "D407",   # dashed-underline-after-section
    # "D415",   # ends-in-punctuation
    # "DTZ005", # call-datetime-now-without-tzinfo
    # "DTZ011", # call-date-today
    # "ERA001", # commented-out-code
    # "G004",   # logging-f-string
    # "ISC003", # explicit-string-concatenation
    # "PGH003", # blanket-type-ignore
    # "PIE790", # unnecessary-placeholder
    # "PTH119", # os-path-basename
    # "PYI013", # ellipsis-in-non-empty-class-body
    # "S104",   # hardcoded-bind-all-interfaces
    # "TRY002", # raise-vanilla-class
    # "UP037",  # quoted-annotation

]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]
